mdapi/objects/Survey_Question_Response__c.object
<CustomObject>
    <label>Survey Question Response</label>
    <nameField>
        <displayFormat>SQR-{000000}</displayFormat>
        <label>Survey Question Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>Survey Question Responses</relationshipLabel>
        <relationshipName>Survey_Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Response__c</fullName>
        <label>Survey Response</label>
        <referenceTo>Survey_Response__c</referenceTo>
        <relationshipLabel>Survey Question Responses</relationshipLabel>
        <relationshipName>Survey_Question_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>